--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
        <div class='footer'>
            <div class="contact">
                <a target="_blank" href="https://github.com/NEERAJAP2001/DIABETES-PREDICTION"><i class="fab fa-github fa-lg contact-icon"></i></a>
-               <a target="_blank" href="https://www.linkedin.com/in/anujkvyas"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
+               <a target="_blank" href="www.google.com"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
            </div>
            <p class='footer-description'>Made by NEERAJ AP</p>
        </div>
